--- a/Portfolio/stylesheet.css
+++ b/Portfolio/stylesheet.css
@@ -5,7 +5,6 @@
 }
 
 
-
 body {
   background-color: #F5EFE6;
   /*👉width: 978px;👈*/
@@ -15,11 +14,6 @@ body {
 }
 
 
-
-
-
-
-
 .logo {
   font-size: 50px;
   width: 100px;
@@ -27,6 +21,8 @@ body {
   color: #3882A6;
   font-weight: 900;
 }
+
+
 
 /*👉=======GRID HEADER============👈*/
 .page-header {
@@ -90,15 +86,57 @@ body {
   font-weight: bold;
 }
 
+.navbar {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.menu li {
+  margin: 0 1em;
+}
+
+.toggle {
+  display: none;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+
+  cursor: pointer;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-left: auto;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+
+  .toggle {
+    display: block;
+  }
+}
+
+.menu.visible {
+  display: block;
+}
+
+
+
+
+
+
+
+
 /*👉=========================NAVIGATION CSS======================👈*/
-
-
-
-
-
-
-
-
 
 
 
@@ -139,10 +177,12 @@ ul.breadcrumb li a:hover {
 /*👉===================↑  BreadCrumb  ↑=======================👈*/
 
 
-
-
-
-
+@media only screen and (max-width: 700px) {
+ .breadcrumb{
+  opacity: 0;
+ }
+  
+}
 
 
 
@@ -218,6 +258,50 @@ footer {
 }
 👈*/
 
+@media only screen and (max-width: 700px) {
+
+  footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    width: auto;
+    padding-top: 5px;
+    color: #fff;
+  }
+
+  .footer-content h3 {
+    padding-bottom: 5px;
+    font-size: 2.1rem;
+    font-weight: 250;
+    text-transform: capitalize;
+    line-height: 3rem;
+  }
+  
+  .socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1.1rem 0 1rem 0;
+  }
+  
+  .socials li {
+    margin: 0 5px;
+  }
+  
+  .socials a {
+    text-decoration: none;
+    padding: 10px;
+    color: #ededed;
+    font-size: 20px;
+  
+    /*👉  border-radius: 50%;
+    border: 1px solid white;👈*/
+  
+  }
+}
 
 
 
@@ -319,7 +403,6 @@ footer {
 
 .flex-projects {
   padding-top: 50px;
-  width: 100%;
   gap: 30px;
   margin: auto;
   display: inline-flex;
@@ -328,8 +411,8 @@ footer {
 }
 
 
-/*👉
-.grid-projects {
+
+/*👉.grid-projects {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
@@ -450,8 +533,24 @@ figure:hover+span {
 
 
 
+@media only screen and (max-width: 700px) {
+  .flex-projects {
+    display: block;}
+
+    figure {
+      width: 100%;
+    }
+    section span {
+      width: 100%;
+    }
+
+}
 
 
+@media only screen and (max-width: 700px) {
+
+
+}
 
 
 /*👉==========↓  Projecten detail  ↓==============👈*/
@@ -745,6 +844,21 @@ h1 {
 
 
 
+@media only screen and (max-width: 850px) {
+
+  .namebtn>h1 {
+    font-size: 50px;
+  
+  }
+  
+
+}
+
+
+
+
+
+
 .fontset1 {
   color: #3882A6;
   font-weight: bolder;
@@ -834,6 +948,10 @@ footer {
 
 /*👉============================ABOUT=========================👈*/
 
+
+
+
+
 .td_grid_box {
   display: grid;
   grid-template-columns: 1fr;
@@ -844,6 +962,7 @@ footer {
     "td_grid_title"
     "td_grid_description";
 }
+
 
 .td_grid_title {
   grid-area: td_grid_title;
@@ -889,8 +1008,6 @@ h4 {
 .td_grid_box img {
   object-fit: contain;
   height: 300px;
-
-
 }
 
 
@@ -906,6 +1023,16 @@ h4 {
     "split1 split2";
 }
 
+
+@media (max-width: 769px) {
+  .vertical_split {
+    display: inline-flex;
+    gap: 25px 50px;
+  }
+    
+}
+
+
 .split1 {
   grid-area: split1;
 }
@@ -913,6 +1040,23 @@ h4 {
 .split2 {
   grid-area: split2;
 }
+
+
+@media (max-width: 769px) {
+/*👉  .td_grid_box {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-auto-flow: column;
+    grid-template-areas:
+      "td_grid_title td_grid_description";
+  }
+👈*/
+  .td_grid_box img {
+    display: none;
+  }
+  
+}
+
 
 
 /*👉============================ABOUT=========================👈*/
